[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mip-client-python"
version = "1.0.2"
description = "Python client for the MIP (MSIP) protocol - handles connections, events, errors, and auto-reconnection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "DoctorPok42", email = "pokdoctor@gmail.com" }
]
keywords = ["mip", "msip", "protocol", "client", "async", "networking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/DoctorPok42/MIP-Clients"
Repository = "https://github.com/DoctorPok42/MIP-Clients/tree/main/mip-client-python"
Documentation = "https://github.com/DoctorPok42/MIP-Clients/tree/main/mip-client-python#readme"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mip_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
