[package]
name = "mip-client"
version = "1.0.1"
edition = "2024"
authors = ["DoctorPok42"]
description = "Rust client for the MIP (MSIP) protocol with async support and event handling."
license = "MIT"
readme = "README.md"
repository = "https://github.com/DoctorPok42/MIP-Clients/tree/main/mip-client-rust"
homepage = "https://github.com/DoctorPok42/MIP-Clients"
documentation = "https://docs.rs/mip-client"
keywords = ["mip", "msip", "protocol", "async", "client", "networking"]
categories = ["network-programming", "asynchronous", "protocols"]
rust-version = "1.85"

[lib]
name = "mip_client"
path = "src/lib.rs"

[[bin]]
name = "mip-client-example"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bitflags = "2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
